Details
- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
Major
 - 
    None
 - 
    
Operating System: ReactOS
Platform: x86 Hardware 
Description
This patch fixes various things, from Coverity code defects to conversion 
warnings :
- CID 715948 (logically dead code @ services/rpcserver.c)
 - try to fix CID 716332/3 (resource leaks) by rewriting the ScmReadString
function (@ services/config.c) - zero out the freshly allocated memory (@ services)
 - try to fix CID 716126/7/8 (untrusted value as argument @
advapi32/services/sctrl.c) 
Fix also some "size_t to DWORD" warnings on x64 build (@ 
advapi32/services/scm.c)